src/tui/app/src/snapshots/adam_tui__history_cell__tests__coalesces_reads_across_multiple_calls.snap
---
source: src/tui/app/src/history_cell.rs
expression: rendered
---
• Exploring
  └ Search shimmer_spans
    Read shimmer.rs, status_indicator_widget.rs
