src/tui/app/src/snapshots/adam_tui__history_cell__tests__coalesces_sequential_reads_within_one_call.snap
---
source: src/tui/app/src/history_cell.rs
expression: rendered
---
• Exploring
  └ Search shimmer_spans
    Read shimmer.rs
    Read status_indicator_widget.rs
