src/tui/app/src/snapshots/adam_tui__history_cell__tests__plan_update_with_note_and_wrapping_snapshot.snap
---
source: src/tui/app/src/history_cell.rs
expression: rendered
---

• Updated Plan
  └ I’ll update Grafana call
    error handling by adding
    retries and clearer
    messages when the backend is
    unreachable.
    ✔ Investigate existing error
      paths and logging around
      HTTP timeouts
    □ Harden Grafana client
      error handling with retry/
      backoff and user‑friendly
      messages
    □ Add tests for transient
      failure scenarios and
      surfacing to the UI
