src/tui/app/src/snapshots/adam_tui__history_cell__tests__single_line_command_compact_when_fits.snap
---
source: src/harness/tui/src/history_cell.rs
expression: rendered
---
• Ran echo ok
  └ (no output)
