src/tui/app/src/snapshots/adam_tui__history_cell__tests__stderr_tail_more_than_five_lines_snapshot.snap
---
source: src/tui/app/src/history_cell.rs
assertion_line: 3385
expression: rendered
---
• Ran seq 1 10 1>&2 && false
  └ 1
    2
    … +6 lines (ctrl + t to view transcript)
    9
    10
